--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
         </main>
         <script type="module" src="index.js"  > 
         </script>
+        <script type="module" src="data.js"></script>
     </body>
 </html>
